# example-cmake-app

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  neil.cpp
